syntax = "proto3";

message EndPoint {
    string ip = 1;
    int64 port = 2;
}

message LogSeq {
    int64 index = 1;
    int64 term = 2;
}

message VoteRequest {
    int64 term = 1;
    EndPoint end_point = 2;
    LogSeq log_seq = 3;
}

message VoteResponse {
    int64 term = 1;
    bool granted = 2;
}

message AppendRequest {
}

message AppendResponse {
}

service PeerGRPC {
    rpc Vote(VoteRequest) returns (VoteResponse) {}

    rpc Append(AppendRequest) returns (AppendResponse) {}
}
